Modified logic for RewardsService.java to keep track of donations